# httpserver

./: CMakeLists.txt  build.sh  fileman.cpp  fileman.h  main  worker_fn.cpp  worker_fn.h  worker_man.cpp
src/: config.cpp  config.h  http_def.cpp  http_def.h  logger.cpp  logger.h  main.cpp  res_man.cpp  res_man.h  setup.cpp  setup.h  worker_fn.cpp  worker_man.cpp  worker_man.h
web/: test1.html  test2.html
